--- a/src/Grafica/Administrador_ventana.form
+++ b/src/Grafica/Administrador_ventana.form
@@ -782,49 +782,58 @@
                                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
+                                          <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="modificar_botonModificar" min="-2" pref="151" max="-2" attributes="0"/>
-                                              <Component id="botonEliminar" min="-2" pref="151" max="-2" attributes="0"/>
-                                              <Group type="102" alignment="0" attributes="0">
+                                              <Group type="102" attributes="0">
+                                                  <Group type="103" groupAlignment="0" attributes="0">
+                                                      <Group type="102" attributes="0">
+                                                          <Component id="modificar_textoBuscar" min="-2" pref="333" max="-2" attributes="0"/>
+                                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                                          <Component id="botonBuscar" min="-2" pref="113" max="-2" attributes="0"/>
+                                                      </Group>
+                                                      <Component id="modificar_cedula1" min="-2" pref="182" max="-2" attributes="0"/>
+                                                  </Group>
+                                                  <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
+                                                  <Group type="103" groupAlignment="0" attributes="0">
+                                                      <Component id="modificar_cargo" min="-2" pref="141" max="-2" attributes="0"/>
+                                                      <Component id="modificar_grado" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  </Group>
+                                              </Group>
+                                              <Group type="102" attributes="0">
                                                   <Group type="103" groupAlignment="0" attributes="0">
                                                       <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                                          <Group type="102" attributes="0">
+                                                          <Group type="102" alignment="1" attributes="0">
                                                               <Component id="modificar_contrasenia" min="-2" max="-2" attributes="0"/>
                                                               <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-                                                              <Component id="modificar_textoContrasenia" pref="283" max="32767" attributes="0"/>
+                                                              <Component id="modificar_textoContrasenia" max="32767" attributes="0"/>
                                                           </Group>
-                                                          <Group type="102" attributes="0">
+                                                          <Group type="102" alignment="1" attributes="0">
                                                               <Component id="modificar_cedula" min="-2" pref="98" max="-2" attributes="0"/>
                                                               <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                                                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                                  <Component id="modificar_textoUsuario" pref="333" max="32767" attributes="0"/>
-                                                                  <Component id="modificar_textoCedula" max="32767" attributes="0"/>
+                                                                  <Component id="modificar_textoUsuario" max="32767" attributes="0"/>
+                                                                  <Component id="modificar_textoCedula" min="-2" pref="333" max="-2" attributes="0"/>
                                                               </Group>
                                                           </Group>
                                                       </Group>
                                                       <Component id="modificar_usuario" alignment="0" min="-2" pref="98" max="-2" attributes="0"/>
                                                   </Group>
-                                                  <Group type="103" groupAlignment="0" attributes="0">
-                                                      <Group type="102" attributes="0">
-                                                          <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-                                                          <Group type="103" groupAlignment="0" attributes="0">
-                                                              <Component id="modificar_cargo" min="-2" pref="141" max="-2" attributes="0"/>
-                                                              <Component id="modificar_grado" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                          </Group>
-                                                      </Group>
-                                                      <Group type="102" alignment="0" attributes="0">
-                                                          <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
-                                                          <Component id="modificar_asignatura" min="-2" max="-2" attributes="0"/>
-                                                      </Group>
-                                                  </Group>
+                                                  <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
+                                                  <Component id="modificar_asignatura" min="-2" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="modificar_opcionesAsignatura" min="-2" pref="169" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                                   <Component id="modificar_opcionesGrado" max="32767" attributes="0"/>
                                                   <Component id="modificar_opcionesCargo" pref="171" max="32767" attributes="0"/>
+                                              </Group>
+                                              <Group type="103" alignment="0" groupAlignment="1" attributes="0">
+                                                  <Group type="103" groupAlignment="0" attributes="0">
+                                                      <Component id="modificar_botonModificar" min="-2" pref="151" max="-2" attributes="0"/>
+                                                      <Component id="botonEliminar" min="-2" pref="151" max="-2" attributes="0"/>
+                                                  </Group>
+                                                  <Component id="modificar_opcionesAsignatura" min="-2" pref="169" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <EmptySpace max="32767" attributes="0"/>
@@ -840,34 +849,54 @@
                                   <Component id="cuentasRegistradas" min="-2" pref="28" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="jScrollPane1" min="-2" pref="156" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="modificar_cedula" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                      <Component id="modificar_textoCedula" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                      <Component id="modificar_cargo" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                      <Component id="modificar_opcionesCargo" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="modificar_usuario" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                      <Component id="modificar_textoUsuario" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                      <Component id="modificar_grado" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="modificar_opcionesGrado" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="modificar_asignatura" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="3" attributes="0">
-                                          <Component id="modificar_contrasenia" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                          <Component id="modificar_textoContrasenia" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                          <Component id="modificar_opcionesAsignatura" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                      <Group type="102" alignment="1" attributes="0">
+                                          <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="modificar_cargo" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                              <Component id="modificar_opcionesCargo" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="modificar_grado" alignment="3" min="-2" max="-2" attributes="0"/>
+                                              <Component id="modificar_opcionesGrado" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="modificar_asignatura" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="modificar_opcionesAsignatura" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                          <Component id="modificar_botonModificar" min="-2" pref="40" max="-2" attributes="0"/>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Component id="botonEliminar" min="-2" pref="40" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="1" attributes="0">
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="modificar_cedula1" min="-2" pref="40" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="modificar_textoBuscar" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                              <Component id="botonBuscar" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace max="32767" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="modificar_cedula" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                              <Component id="modificar_textoCedula" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="modificar_usuario" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                              <Component id="modificar_textoUsuario" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="modificar_contrasenia" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                              <Component id="modificar_textoContrasenia" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
                                   </Group>
-                                  <EmptySpace pref="26" max="32767" attributes="0"/>
-                                  <Component id="modificar_botonModificar" min="-2" pref="40" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="botonEliminar" min="-2" pref="40" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+                                  <EmptySpace pref="39" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -1139,6 +1168,38 @@
                           <AuxValues>
                             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
                           </AuxValues>
+                        </Component>
+                        <Component class="javax.swing.JLabel" name="modificar_cedula1">
+                          <Properties>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Dialog" size="20" style="0"/>
+                            </Property>
+                            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="0" green="0" red="0" type="rgb"/>
+                            </Property>
+                            <Property name="text" type="java.lang.String" value="Buscar por c&#xe9;dula"/>
+                          </Properties>
+                        </Component>
+                        <Component class="javax.swing.JTextField" name="modificar_textoBuscar">
+                          <Properties>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Dialog" size="18" style="0"/>
+                            </Property>
+                          </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="modificar_textoBuscarActionPerformed"/>
+                          </Events>
+                        </Component>
+                        <Component class="javax.swing.JButton" name="botonBuscar">
+                          <Properties>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Dialog" size="20" style="0"/>
+                            </Property>
+                            <Property name="text" type="java.lang.String" value="Buscar"/>
+                          </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonBuscarActionPerformed"/>
+                          </Events>
                         </Component>
                       </SubComponents>
                     </Container>
